dxscale/sales/main/objects/Assisted_Sales_Control__c/Assisted_Sales_Control__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Allow Assisted Sales to be switched off and configure destination url.</description>
    <label>Assisted Sales Control</label>
</CustomObject>