dxscale/sales/main/objects/Assisted_Sales_Control__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Assisted Sales is switched on currently.</description>
    <inlineHelpText>Checked if Assisted Sales is switched on currently.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>