dxscale/sales/main/objects/Assisted_Sales_Control__c/fields/Destination_URL__c.field-meta.xml
<CustomField>
    <fullName>Destination_URL__c</fullName>
    <description>Assisted Sales URL</description>
    <inlineHelpText>Assisted Sales URL</inlineHelpText>
    <label>Destination URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>