dxscale/sales/main/objects/Assisted_Sales_Control__c/fields/Open_In_Same_Window__c.field-meta.xml
<CustomField>
    <fullName>Open_In_Same_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked the Assisted Sales UI is opened in the same window for each Opp (replacing the existing info)</description>
    <inlineHelpText>uncheck this if you want a window per opportunity</inlineHelpText>
    <label>Open In Same Window</label>
    <type>Checkbox</type>
</CustomField>